--- a/module/basemarker/basemarker.less
+++ b/module/basemarker/basemarker.less
@@ -3,7 +3,7 @@
   min-height: 300px;
   background: rgba(255,255,255, 0.7);
   position: absolute;
-  right: 5px;
+  left: 5px;
   top: 5px;
   z-index: 2;
   box-shadow: 0 0px 2px black,  0 0px 5px white;
@@ -48,8 +48,8 @@
       width: 22px;
       height: 16px;
       display: none;
-      background: url("../img/510title.png") no-repeat center;
-      background-size: 100% 100%;
+      background: url("../img/crushtitle.png") no-repeat center;
+      background-size: 129% 129%;
     }
     .content{
       padding: 5px 0 0 0;
