--- a/css/main.less
+++ b/css/main.less
@@ -87,6 +87,10 @@ body>table{
   background: #ffffff;
   color: #000000;
   padding: 5px 10px;
+  cursor: pointer;
+  &:active{
+    color: #ffffff;
+  }
 }
 .button.search{
   z-index: 2;
